# calsync_daemon

./: .flake8  .ruff.toml  pyproject.toml  pyrightconfig.json
calsync_daemon/: __main__.py  cli.py
