[tool.poetry]
name = "calsync-daemon"
version = "0.1.0"
description = ""
authors = ["Lumen Yang <lumen.yang@lumeny.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
caldav = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
